--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.75",
     "@types/dompurify": "^3.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
