--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.75",
     "@types/dompurify": "^3.0.2",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "dompurify": "^3.0.5",
     "eslint": "^8.45.0",
